--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-server.port=8443
-spring.security.user.name=admin
-spring.security.user.password=admin123
+#server.port=9090
+#spring.security.user.name=admin
+#spring.security.user.password=admin123
 
 #server.ssl.enabled=true
 #server.ssl.key-store: src/main/resources/bootsecurity.p12
@@ -9,7 +9,7 @@ spring.security.user.password=admin123
 #server.ssl.keyAlias: bootsecurity spring.security.user.name=admin
 ############# Database Properties ###########################################
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/swaggertask?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
+spring.datasource.url=jdbc:mysql://localhost:3306/goldentask?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
 spring.datasource.username=root
 spring.datasource.password=gado
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
