The Task is finished #2 adding files

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,5 +16,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.initialization-mode=always
 spring.jpa.show-sql=true
+logging.level.com.spring.swagger=DEBUG
+spring.jpa.database
 
 spring.main.allow-bean-definition-overriding=true
