The Task is finished #2 adding files

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,14 @@
-server.port=8081
+server.port=8080
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
+
+jwt.header=Authorization
+jwt.secret=my-very-secret-key
 #spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 #spring.security.user.name=admin
 #spring.security.user.password=admin123
 
-#jwt:secret: secretkey123
-#server.ssl.enabled=true
+##server.ssl.enabled=true
 #server.ssl.key-store: src/main/resources/bootsecurity.p12
 #server.ssl.key-store-password: spring
 #server.ssl.keyStoreType: PKCS12
